<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ReunionDetails"
    android:background="@color/white">

    <!--return button -->
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="44dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="16dp" />

    <!-- reunion details sentence-->
    <TextView
        android:id="@+id/reunion_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reunionDetail"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="620dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983" />


    <!-- cardview with all the reunion details -->
    <androidx.cardview.widget.CardView
        android:id="@+id/details"
        android:layout_width="392dp"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:cardCornerRadius="15dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/room"
            android:layout_width="362dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="200dp"
            android:background="@color/white"
            android:text="Réunion B"
            android:textAlignment="center"
            android:paddingTop="13dp"/>

        <TextView
            android:id="@+id/date"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="200dp"
            android:layout_width="362dp"
            android:background="@color/white"
            android:text="Mardi 02 juin 2020"
            android:textAlignment="center"
            android:paddingTop="13dp"/>

        <TextView
            android:id="@+id/time"
            android:layout_height="50dp"
            android:layout_width="362dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="200dp"
            android:background="@color/white"
            android:text="14h30 - 15h30"
            android:textAlignment="center"
            android:paddingTop="13dp"/>

        <TextView
            android:id="@+id/collegues"
            android:layout_height="50dp"
            android:layout_width="362dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="350dp"
            android:layout_marginBottom="50dp"
            android:background="@color/white"
            android:text="@string/people"
            android:textAlignment="center"
            android:paddingTop="13dp"/>
    </androidx.cardview.widget.CardView>




    <!--canceling button-->
    <Button
        android:id="@+id/save"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983" />


</androidx.constraintlayout.widget.ConstraintLayout>